# PyAGW3

./: MAINFEST.in  README.md  TREE.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
examples/: __init__.py  basic_connect.py  connected_mode.py  query_server.py  raw_monitoring.py  unproto_beacon.py
man/: pyagw3.3
pyagw3/: __init__.py  agwpe.py
tests/: __init__.py  conftest.py  test_callbacks.py  test_connection.py  test_edge_cases.py  test_frame_parsing.py  test_frame_sending.py
